<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"> <!-- Ajustado a wrap_content -->

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/graph"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/Question"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_mo_te_sientes_el_d_a_de_hoy"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="5">

                <ImageButton
                    android:id="@+id/verySadButton"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/muy_triste"
                    android:src="@drawable/sentiment_very_dissatisfied"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/sadButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/sentiment_dissatisfied"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/triste"
                    android:scaleType="fitXY"
                    />

                <ImageButton
                    android:id="@+id/neutralButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/sentiment_neutral"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/neutral"
                    android:scaleType="fitXY"
                    />

                <ImageButton
                    android:id="@+id/happyButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/sentiment_satisfied"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/feliz"
                    android:scaleType="fitXY"
                    />

                <ImageButton
                    android:id="@+id/veryHappyButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/sentiment_very_satisfied"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/muy_feliz"
                    android:scaleType="fitXY"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/guardarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"/>

            <GridLayout
                android:id="@+id/bargraphs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:columnCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="Muy feliz"/>
                <View
                    android:id="@+id/graphVeryHappy"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feliz"/>
                <View
                    android:id="@+id/graphHappy"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Neutral"/>
                <View
                    android:id="@+id/graphNeutral"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Triste"/>
                <View
                    android:id="@+id/graphSad"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Muy triste"/>
                <View
                    android:id="@+id/graphVerySad"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>
            </GridLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

